[emacs] Fallback to load path when flymake load path is unspecified

--- a/emacs.org
+++ b/emacs.org
@@ -6811,6 +6811,15 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
 #+BEGIN_SRC emacs-lisp
   (use-package elisp-mode
     :mode ((rx ".el" string-end) . emacs-lisp-mode)
+    :preface
+    ;; koek/default+load-path
+    (define-advice elisp-flymake-byte-compile
+        (:around (f &rest args) koek-el/normalize-flymake-load-path)
+      (let ((elisp-flymake-byte-compile-load-path ; Dynamic variable
+             (if (eq elisp-flymake-byte-compile-load-path 'koek/default+load-path)
+                 (cons "." load-path)
+               elisp-flymake-byte-compile-load-path)))
+        (apply f args)))
     :config
     (use-package pp
       :bind
@@ -6833,6 +6842,8 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
      ("C-c C-c" . eval-buffer)
      :map lisp-interaction-mode-map
      ("C-c C-c" . eval-buffer))
+
+    (setq elisp-flymake-byte-compile-load-path 'koek/default+load-path)
     :delight (emacs-lisp-mode "El" :major))
 #+END_SRC
 
