--- a/emacs.org
+++ b/emacs.org
@@ -7180,8 +7180,7 @@ templates]].
     :preface
     (define-advice org-src--construct-edit-buffer-name
         (:override (org-buffer-name _lang) koek-org/construct-edit-buffer-name)
-      ;; Mirror helpful buffer names
-      (format "*org-src: %s*" org-buffer-name))
+      (format "*org-src: %s*" org-buffer-name)) ; Mirror helpful
     :config
     (setq org-src-window-setup 'plain)
     (setq org-src-ask-before-returning-to-edit-buffer nil)
