[emacs] Bind python-shell-send-statement in python-mode

--- a/emacs.org
+++ b/emacs.org
@@ -7383,6 +7383,9 @@ It is part of tangling [[*yasnippet - Snippets][embedded snippets]].
 #+BEGIN_SRC emacs-lisp
   (use-package python
     :mode ((rx ".py" string-end) . python-mode)
+    :bind
+    (:map python-mode-map
+     ("C-x C-e" . python-shell-send-statement))
     :preface
     (defun koek-py/disable-checker ()
       "Disable Python checker for current."
