[emacs] Add Firefox buffers to web category

--- a/emacs.org
+++ b/emacs.org
@@ -1217,6 +1217,10 @@ buffers.
 
   ;; Web buffers
   (setq koek-buff/web-modes '(eww-mode))
+  (setq koek-buff/web-fs
+        `(koek-buff/web-mode-p
+          koek-buff/web-name-p
+          ,(apply-partially #'koek-wm/classp "firefox")))
 #+END_SRC
 
 ** ibuffer - list-buffers replacement
