[emacs] Rework manage exwm buffers

--- a/emacs.org
+++ b/emacs.org
@@ -506,19 +506,20 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
   (use-package exwm-manage
     :defer t
     :config
-    (setq exwm-manage-configurations
-          `(((koek-wm/classp "gimp")
-             char-mode t floating-mode-line nil)
-            ((koek-wm/classp "inkscape")
-             char-mode t floating-mode-line nil)
-            ((koek-wm/classp "firefox")
-             simulation-keys
-             ,(mapcar (pcase-lambda (`(,from . ,to))
-                        (cons (kbd from) (kbd to)))
-                      (append '(("M-o" . "C-n")
-                                ("M-p" . "S-C-p")
-                                ("M-k" . "C-w"))
-                              koek-wm/base-simulation-keys))))))
+    (let ((defaults '(floating-mode-line nil)))
+      (setq exwm-manage-configurations
+            `(((koek-wm/classp "gimp")
+               char-mode t ,@defaults)
+              ((koek-wm/classp "inkscape")
+               char-mode t ,@defaults)
+              ((koek-wm/classp "firefox")
+               simulation-keys
+               ,(mapcar (pcase-lambda (`(,from . ,to))
+                          (cons (kbd from) (kbd to)))
+                        (append '(("M-o" . "C-n")
+                                  ("M-p" . "S-C-p")
+                                  ("M-k" . "C-w"))
+                                koek-wm/base-simulation-keys)))))))
 #+END_SRC
 
 *** exar - Monitors :wip:
