[emacs] Tweak symbols
Purely aesthetical, not functional.

--- a/emacs.org
+++ b/emacs.org
@@ -94,7 +94,7 @@ limited to what's available in a package archive. Configure straight.
            'silent 'inhibit-cookies)
         (goto-char (point-max))
         (eval-print-last-sexp)))
-    (load bootstrap-file nil 'nomessage))
+    (load bootstrap-file nil 'no-message))
 #+END_SRC
 
 ** Embedded packages
@@ -130,7 +130,7 @@ or the [[*use-package - Package configuration macro][use-package]] keyword ~:koe
                            (expand-file-name "lisp/")
                            (expand-file-name package-name))))
          (load ,(concat package-name "-autoloads.el")
-               'noerror 'nomessage 'nosuffix))))
+               'no-error 'no-message 'no-suffix))))
 #+END_SRC
 
 For examples, see [[*prepcast - Prepare for screencasting][prepcast]] and other code blocks which output to
@@ -967,7 +967,7 @@ something short.
              (seq-mapcat
               (lambda (file-name)
                 (directory-files file-name
-                                 'full (rx ".desktop" line-end) 'nosort))))))
+                                 'full (rx ".desktop" line-end) 'no-sort))))))
       (seq-reduce (lambda (entries file-name)
                     (let ((id (file-name-base file-name)))
                       (unless (gethash id entries)
@@ -8160,7 +8160,7 @@ windows and continues in the mode line.
         (with-current-buffer buffer
           (calendar-set-mode-line
            (calendar-date-string (calendar-current-date)
-                                 'abbreviate 'nodayname)))))
+                                 'abbreviate 'no-dayname)))))
     :config
     (setq x-underline-at-descent-line t)
     (setq moody-mode-line-height 24)
