--- a/emacs.org
+++ b/emacs.org
@@ -230,7 +230,7 @@ The idea for acquiring the URL of Firefox buffers is from [[https://www.reddit.c
 b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper][KeePass Helper]].
 
 #+BEGIN_SRC emacs-lisp
-  ;; Prevent exwm from asking to replace window manager after
+  ;; Prevent exwm from querying whether to replace window manager after
   ;; installation
   (setq exwm-replace nil)
 
