--- a/emacs.org
+++ b/emacs.org
@@ -428,6 +428,18 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
        exwm-title)
       (list :url (match-string 1 exwm-title) :title (match-string 2 exwm-title)))
 
+    (defun koek-wm/make-firefox-record ()
+      (let* ((page (koek-wm/get-firefox-page))
+             (url (or (plist-get page :url) (user-error "Not visiting a URL")))
+             (title (plist-get page :title)))
+        (koek-bmrk/generic-url-record url title)))
+
+    (defun koek-wm/setup-current ()
+      (cond
+       ((koek-wm/classp "firefox")
+        (setq-local bookmark-make-record-function
+                    #'koek-wm/make-firefox-record))))
+
     (defun koek-wm/update-current ()
       (cond
        ;; Creative
@@ -539,6 +551,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
     (setq exwm-workspace-number 2)
     (setq exwm-workspace-show-all-buffers t)
     (setq exwm-workspace-index-map #'koek-wm/n-to-label)
+    (add-hook 'exwm-update-class-hook #'koek-wm/setup-current)
     (add-hook 'exwm-update-title-hook #'koek-wm/update-current))
 
   (use-package exwm-layout
@@ -1711,7 +1724,8 @@ Bury unneeded buffers, computers have more than enough memory.
     (defvar koek-cslt/inhibited-file-names
       (rx (or ".pdf" ".png" ".jpg") line-end))
 
-    (defvar koek-cslt/inhibited-bookmark-handlers nil)
+    (defvar koek-cslt/inhibited-bookmark-handlers
+      '(koek-bmrk/handle-generic-url elfeed-show-bookmark-handler))
 
     (defun koek-cslt/inhibit-preview-p (candidate)
       (let* ((buffer (get-buffer candidate))
@@ -1840,7 +1854,10 @@ Bury unneeded buffers, computers have more than enough memory.
             koek-cslt/web-buffer-source
             consult--source-project-buffer
             consult--source-project-recent-file))
-    (setq consult-bookmark-narrow '((?f "File" bookmark-default-handler))))
+    (setq consult-bookmark-narrow
+          '((?f "File" bookmark-default-handler)
+            (?w "Web" koek-bmrk/handle-generic-url)
+            (?n "News" elfeed-show-bookmark-handler))))
 #+END_SRC
 
 ** embark - Actions
@@ -1871,6 +1888,10 @@ minibuffer.
      ("t" . koek-mu4e/display-messages-to)
      ("f" . koek-mu4e/display-messages-from)
      ("a" . koek-bbdb/display-email))
+
+    (bind-keys
+     :map embark-bookmark-map
+     ("e" . koek-eww/jump-bookmark))
 
     (setq embark-help-key (kbd "?")))
 #+END_SRC
@@ -1981,6 +2002,53 @@ minibuffer.
     :after dired
     :config
     (diredfl-global-mode))
+#+END_SRC
+
+** bookmark - Bookmarks
+#+BEGIN_SRC emacs-lisp
+  (use-package bookmark
+    :bind
+    (("C-x r m" . bookmark-set-no-overwrite)
+     ("C-x r C-m" . bookmark-set))
+    :preface
+    ;; Violates handler contract, a handler must set but not select
+    ;; current
+    (defun koek-bmrk/handle-browse-url (bookmark)
+      (browse-url (bookmark-get-filename bookmark)))
+
+    (defvar koek-bmrk/handle-generic-url-f #'koek-bmrk/handle-browse-url)
+
+    (defun koek-bmrk/handle-generic-url (bookmark)
+      (funcall koek-bmrk/handle-generic-url-f bookmark))
+    (put 'koek-bmrk/handle-generic-url 'bookmark-handler-type "Web")
+
+    (defun koek-bmrk/generic-url-record (url &optional name)
+      `(,name . ((handler . koek-bmrk/handle-generic-url)
+                 (filename . ,url))))
+
+    (defvar koek-bmrk/generic-url-history nil
+      "History of generic URL titles read.")
+
+    (defun koek-bmrk/read-generic-url (prompt)
+      (require 'bookmark)
+      (bookmark-maybe-load-default-file)
+      (let ((candidates (seq-filter (lambda (bookmark)
+                                      (eq (bookmark-get-handler bookmark)
+                                          'koek-bmrk/handle-generic-url))
+                                    bookmark-alist)))
+        (completing-read
+         prompt
+         (lambda (input pred action)
+           (pcase action
+             ('metadata
+              '(metadata . ((category . bookmark))))
+             (_action
+              (complete-with-action action candidates input pred))))
+         nil t nil 'koek-bmrk/generic-url-history)))
+    :config
+    (setq bookmark-default-file
+          (no-littering-expand-etc-file-name "bookmark-default.el"))
+    (setq bookmark-bmenu-file-column 42)) ; padding
 #+END_SRC
 
 ** recentf - Recent files
@@ -2540,8 +2608,8 @@ For more information, see ~man 5 hunspell~.
   (use-package hl-line
     :bind ("C-c a l" . hl-line-mode)      ; [L]ine
     :hook
-    ((ibuffer-mode embark-collect-mode dired-mode occur-mode grep-mode proced-mode
-      bongo-playlist-mode)
+    ((ibuffer-mode embark-collect-mode dired-mode bookmark-bmenu-mode occur-mode
+      grep-mode proced-mode bongo-playlist-mode)
      . hl-line-mode))
 #+END_SRC
 
@@ -5398,10 +5466,32 @@ Inherit Clojure snippets.
     :bind
     ("C-c x b" . eww)
     :preface
+    (defun koek-eww/handle-eww (bookmark)
+      (let ((name (bookmark-name-from-full-record bookmark)))
+        (set-buffer
+         (generate-new-buffer (koek-subr/construct-earmuffed-name "eww" name)))
+        (eww-mode)
+        (eww (bookmark-get-filename bookmark))))
+
+    (defun koek-eww/jump-bookmark (bookmark)
+      (interactive (list (koek-bmrk/read-generic-url "Bookmark: ")))
+      (let ((koek-bmrk/handle-generic-url-f ; Dynamic variable
+             #'koek-eww/handle-eww))
+        (bookmark-jump bookmark)))
+
     (defun koek-eww/get-page ()
       (let ((url (plist-get eww-data :url))
             (title (plist-get eww-data :title)))
         (list :url url :title (unless (string-empty-p title) title))))
+
+    (defun koek-eww/make-record ()
+      (let* ((page (koek-eww/get-page))
+             (url (or (plist-get page :url) (user-error "Not visiting a URL")))
+             (title (plist-get page :title)))
+        (koek-bmrk/generic-url-record url title)))
+
+    (defun koek-eww/setup-current ()
+      (setq-local bookmark-make-record-function #'koek-eww/make-record))
 
     (defun koek-eww/update-current ()
       (let* ((page (koek-eww/get-page))
@@ -5465,6 +5555,7 @@ Inherit Clojure snippets.
     (bind-key "m" #'koek-eww/redirect eww-mode-map)
 
     (push #'koek-eww/redirect-reddit koek-eww/redirect-fs)
+    (add-hook 'eww-mode-hook #'koek-eww/setup-current)
     (add-hook 'eww-after-render-hook #'koek-eww/update-current))
 #+END_SRC
 
@@ -5851,6 +5942,8 @@ Configure elfeed afterwards.
 
   (use-package elfeed-show
     :defer t
+    :init
+    (put 'elfeed-show-bookmark-handler 'bookmark-handler-type "News")
     :config
     (use-package link-hint
       :bind
@@ -8401,13 +8494,7 @@ Configure notes.
   })({protocol: "capture", template: "t", url: location.href, title: document.title, body: window.getSelection()});
 #+END_SRC
 
-To capture /Bookmark/, /Webpage/ and /Book/ from the browser, create three
-[[https://en.wikipedia.org/wiki/Bookmarklet][bookmarklets]]:
-
-#+CAPTION: Bladwijzer (bookmark)
-#+BEGIN_SRC js
-  javascript:((args) => {"use strict"; const toQuery = (args) => Object.entries(args).map(([key, value]) => `${key}=${value}`).join("&"); const {protocol, ...rest} = Object.keys(args).reduce((acc, key) => {acc[key] = encodeURIComponent(args[key]); return acc;}, {}); location.href = `org-protocol://${protocol}?${toQuery(rest)}`;})({protocol: "capture", template: "b", url: location.href, title: document.title});
-#+END_SRC
+To capture /Webpage/ and /Book/ from the browser, create two [[https://en.wikipedia.org/wiki/Bookmarklet][bookmarklets]]:
 
 #+CAPTION: Notitie (webpage)
 #+BEGIN_SRC js
@@ -8452,15 +8539,6 @@ Configure org capture templates.
              ,(string-join '("* %^{Name}"
                              "%^T"
                              "%^{LOCATION}p" ; Inserted after heading
-                             "%?")
-                           "\n")
-             :empty-lines 1)
-            ("b" "Bookmark" entry (file+olp "Inbox.org" "Bladwijzers")
-             ,(string-join '("* %:description %^g"
-                             ":PROPERTIES:"
-                             ":URL: %L"
-                             ":END:"
-                             ""
                              "%?")
                            "\n")
              :empty-lines 1)
