[emacs] Bind fit-window-to-buffer

--- a/emacs.org
+++ b/emacs.org
@@ -1119,6 +1119,7 @@ Rebind cumbersome and bind additional window commands.
    ("C-c w h" . split-window-below)
    ("C-c w v" . split-window-right)
    ("C-c w b" . balance-windows)
+   ("C-c w a" . fit-window-to-buffer)     ; [A]dapt
    ("C-c w d" . delete-window)
    ("C-c w C-d" . delete-other-windows)
    ("C-c w M-d" . kill-buffer-and-window)
