--- a/emacs.org
+++ b/emacs.org
@@ -1977,6 +1977,11 @@ minibuffer.
     :config
     (autoload #'dired-dwim-target-next-visible "dired-aux")
 
+    (use-package gnus-dired
+      :bind
+      (:map dired-mode-map
+       ("C-c f a" . gnus-dired-attach)))
+
     (setq dired-dwim-target #'dired-dwim-target-next-visible)
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
@@ -5964,6 +5969,16 @@ Configure elfeed afterwards.
      ("B" . elfeed-show-visit)
      ("e" . koek-feed/enqueue-dwim)
      ("E" . koek-feed/enqueue-next-dwim)))
+#+END_SRC
+
+** gnus - News reader
+Gnus is a placeholder.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package gnus-dired
+    :hook (dired-mode . turn-on-gnus-dired-mode)
+    :config
+    (setq gnus-dired-mail-mode mail-user-agent))
 #+END_SRC
 
 ** pdf-tools - PDF viewer
