--- a/emacs.org
+++ b/emacs.org
@@ -519,7 +519,8 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
                         (append '(("M-o" . "C-n")
                                   ("M-p" . "S-C-p")
                                   ("M-k" . "C-w"))
-                                koek-wm/base-simulation-keys)))))))
+                                koek-wm/base-simulation-keys))
+               ,@defaults)))))
 #+END_SRC
 
 *** exar - Monitors :wip:
