[bash][emacs] Tweak ls switches

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -464,7 +464,7 @@ Non login
 #+END_SRC
 
 #+BEGIN_SRC sh
-  alias ls='ls -lah --group-directories-first --color=auto'
+  alias ls='ls -lAh --group-directories-first --color=auto'
 #+END_SRC
 
 #+BEGIN_SRC sh
