--- a/emacs.org
+++ b/emacs.org
@@ -1985,7 +1985,7 @@ minibuffer.
     (setq dired-dwim-target #'dired-dwim-target-next-visible)
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
-    (let* ((safe "-lah") ; For safe switches, see `ls-lisp--insert-directory'
+    (let* ((safe "-lAh") ; For safe switches, see `ls-lisp--insert-directory'
            (unsafe (concat safe " --group-directories-first")))
       (setq dired-listing-switches (if (executable-find "ls") unsafe safe))))
 
@@ -5446,7 +5446,7 @@ Inherit Clojure snippets.
 
 *** Aliases
 #+BEGIN_SRC fundamental :tangle stow/emacs/.config/emacs/etc/eshell/aliases
-  alias ls ls -lah $*
+  alias ls ls -lAh $*
   alias nb jupyter notebook $*
 #+END_SRC
 
