--- a/emacs.org
+++ b/emacs.org
@@ -1997,6 +1997,7 @@ minibuffer.
 
   (use-package dired-x
     :after dired
+    :demand t ; Install keybindings of package, :after precedes :demand
     :bind
     ("C-c f d" . dired-jump))
 
