[emacs] Tweak docstring

--- a/emacs.org
+++ b/emacs.org
@@ -2358,7 +2358,7 @@ VC is a placeholder.
     :preface
     (defun koek-git/check-spelling (force)
       "Check spelling of commit message.
-  When FORCE is truthy, continue commit unconditionally."
+  When FORCE is truthy, unconditionally continue commit."
       (let ((tick (buffer-chars-modified-tick))
             (result
              (let ((ispell-skip-region-alist ; Dynamic variable
