[emacs] Configure lin

--- a/emacs.org
+++ b/emacs.org
@@ -2622,11 +2622,22 @@ For more information, see ~man 5 hunspell~.
 ** hl-line - Highlight current line
 #+BEGIN_SRC emacs-lisp
   (use-package hl-line
-    :bind ("C-c a l" . hl-line-mode)      ; [L]ine
+    :bind ("C-c a l" . hl-line-mode))     ; [L]ine
+#+END_SRC
+
+*** lin - Alternative line style
+[[https://git.sr.ht/~protesilaos/lin][lin (sourcehut)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package lin
+    :straight t
     :hook
-    ((ibuffer-mode embark-collect-mode dired-mode bookmark-bmenu-mode occur-mode
-      grep-mode proced-mode bongo-playlist-mode)
-     . hl-line-mode))
+    ((ibuffer-mode embark-collect-mode dired-mode bookmark-bmenu-mode
+      git-rebase-mode occur-mode grep-mode proced-mode mu4e-headers-mode
+      elfeed-search-mode bongo-playlist-mode)
+     . lin-mode)
+    :config
+    (setq lin-face 'lin-blue-override-fg))
 #+END_SRC
 
 * Constructs
@@ -7819,6 +7830,7 @@ current theme.
           (custom-set-faces
            `(koek-wm/selected-workspace ((,class :inherit bold)))
            `(eyebrowse-mode-line-active ((,class :foreground unspecified)))
+           `(dired-directory            ((,class :inherit bold)))
            `(koek-diff/variant          ((,class :inherit bold)))
            `(pdf-links-read-link        ((,class
                                           :foreground unspecified :background unspecified
