[emacs] Tweak docstrings

--- a/emacs.org
+++ b/emacs.org
@@ -2760,8 +2760,8 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
     :preface
     (defun koek-sp/separate-sexp (open-delimiter action _context)
       "Separate just inserted sexp from previous and/or next sexp.
-  OPEN-DELIMITER is a string, the delimiter inserted.  ACTION is a
-  symbol, the action performed, see `sp-pair'.  _CONTEXT is
+  OPEN-DELIMITER is a string, the inserted delimiter.  ACTION is a
+  symbol, the performed action, see `sp-pair'.  _CONTEXT is
   ignored."
       (when (and (eq action 'insert)
                  ;; Outer context, _context is inner context
@@ -2788,8 +2788,8 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
 
     (defun koek-sp/format-c-block (open-delimiter action _context)
       "Format just inserted multiple line C block.
-  OPEN-DELIMITER is a string, the delimiter inserted.  ACTION is a
-  symbol, the action performed, see `sp-pair'.  _CONTEXT is
+  OPEN-DELIMITER is a string, the inserted delimiter.  ACTION is a
+  symbol, the performed action, see `sp-pair'.  _CONTEXT is
   ignored."
       (when (and (eq action 'insert)
                  (save-excursion
