--- a/emacs.org
+++ b/emacs.org
@@ -2761,8 +2761,7 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
     (defun koek-sp/separate-sexp (open-delimiter action _context)
       "Separate just inserted sexp from previous and/or next sexp.
   OPEN-DELIMITER is a string, the inserted delimiter.  ACTION is a
-  symbol, the performed action, see `sp-pair'.  _CONTEXT is
-  ignored."
+  symbol, the performed action, see `sp-pair'."
       (when (and (eq action 'insert)
                  ;; Outer context, _context is inner context
                  (save-excursion
@@ -2789,8 +2788,7 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-mtn/next-word~ and
     (defun koek-sp/format-c-block (open-delimiter action _context)
       "Format just inserted multiple line C block.
   OPEN-DELIMITER is a string, the inserted delimiter.  ACTION is a
-  symbol, the performed action, see `sp-pair'.  _CONTEXT is
-  ignored."
+  symbol, the performed action, see `sp-pair'."
       (when (and (eq action 'insert)
                  (save-excursion
                    (search-backward open-delimiter)
@@ -7441,7 +7439,7 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
     (defun koek-org/construct-birthday-entry-name (name age _age-suffix)
       "Return name of agenda entry for birthday.
   NAME is a string, the name of the person.  AGE is an integer, the
-  age of the person.  _AGE-SUFFIX is ignored."
+  age of the person."
       (format "[[bbdb:%s][%s (%d %s old)]]"
               name name age (if (= age 1) "year" "years")))
     :config
