[emacs] Rename koek-ys/make-ensure-result-dir
Rename koek-ys/make-ensure-result-dir to koek-ys/make-mkdir-result.

--- a/emacs.org
+++ b/emacs.org
@@ -3178,8 +3178,8 @@ For the major mode, see [[*YASnippet][YASnippet]].
                                               (plist-get spec :org)))
                                       koek-ys/languages)))
 
-    (defun koek-ys/make-ensure-result-dir (name)
-      "Return function to ensure result directory of current code block exists.
+    (defun koek-ys/make-mkdir-result (name)
+      "Return function to make result directory of current code block.
   NAME is a string, the name of the variable storing the result
   file name."
       (lambda ()
@@ -3632,7 +3632,7 @@ Inherit Clojure snippets.
   # -*- mode: snippet; -*-
   # name: Octave plot code block
   # key: smplot
-  # expand-env: ((yas-after-exit-snippet-hook `(,(koek-ys/make-ensure-result-dir "path"))) (yas-indent-line 'fixed))
+  # expand-env: ((yas-after-exit-snippet-hook `(,(koek-ys/make-mkdir-result "path"))) (yas-indent-line 'fixed))
   # --
   ,#+BEGIN_SRC octave :var path="images/plot-${1:name}.png" :results file :exports results
     fig = figure('visible', 'off');
@@ -3683,7 +3683,7 @@ Inherit Clojure snippets.
   # -*- mode: snippet; -*-
   # name: Python plot code block
   # key: spyplot
-  # expand-env: ((yas-after-exit-snippet-hook `(,(koek-ys/make-ensure-result-dir "path"))) (yas-indent-line 'fixed))
+  # expand-env: ((yas-after-exit-snippet-hook `(,(koek-ys/make-mkdir-result "path"))) (yas-indent-line 'fixed))
   # --
   ,#+BEGIN_SRC python :var path="images/plot-${1:name}.png" :results file :exports results
     from numpy import pi, linspace, sin, cos
