[emacs] Tweak name of magit buffers

--- a/emacs.org
+++ b/emacs.org
@@ -2327,7 +2327,7 @@ VC is a placeholder.
     :straight magit
     :defer t
     :config
-    (setq magit-uniquify-buffer-names nil)
+    (setq magit-buffer-name-format "*%M%V: %t*")
     (setq magit-display-buffer-function #'display-buffer)
     (setq magit-bury-buffer-function #'quit-window))
 
