[emacs] Bind magit-file-dispatch

--- a/emacs.org
+++ b/emacs.org
@@ -2335,6 +2335,10 @@ VC is a placeholder.
     :bind
     ("C-c f m" . magit-status))
 
+  (use-package magit-files
+    :bind
+    ("C-c f C-m" . magit-file-dispatch))
+
   (use-package magit-diff
     :defer t
     :config
