--- a/emacs.org
+++ b/emacs.org
@@ -5217,8 +5217,8 @@ Inherit Clojure snippets.
     :defer t
     :config
     (setq company-dabbrev-other-buffers t) ; Same major mode
-    (setq company-dabbrev-ignore-case t) ; Case typed, during candidate collection
-    (setq company-dabbrev-downcase nil)) ; Case candidate, when inserted
+    (setq company-dabbrev-ignore-case t)   ; Case typed, during completion
+    (setq company-dabbrev-downcase nil))   ; Case candidate, when inserted
 #+END_SRC
 
 *** company-flx - Flx completion style
