[emacs] Select window when displaying man buffers

--- a/emacs.org
+++ b/emacs.org
@@ -5306,7 +5306,15 @@ Inherit Clojure snippets.
 #+BEGIN_SRC emacs-lisp
   (use-package man
     :bind
-    ("C-c d m" . man))
+    ("C-c d m" . man)
+    :preface
+    (define-advice Man-notify-when-ready
+        (:around (f buffer) koek-man/normalize-notify-method)
+      (if (eq Man-notify-method 'koek/pop-to-buffer)
+          (pop-to-buffer buffer)
+        (funcall f buffer)))
+    :config
+    (setq Man-notify-method 'koek/pop-to-buffer))
 #+END_SRC
 
 ** apropos - Search Emacs environment
