[emacs] Bind link-hint-open-link in man-mode

--- a/emacs.org
+++ b/emacs.org
@@ -5314,6 +5314,11 @@ Inherit Clojure snippets.
           (pop-to-buffer buffer)
         (funcall f buffer)))
     :config
+    (use-package link-hint
+      :bind
+      (:map Man-mode-map
+       ("j" . link-hint-open-link)))
+
     (setq Man-notify-method 'koek/pop-to-buffer))
 #+END_SRC
 
