[emacs] Set default URL rewrite functions

--- a/emacs.org
+++ b/emacs.org
@@ -5566,12 +5566,6 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
                  "*")
          'unique)))
 
-    (defvar koek-eww/rewrite-fs nil
-      "List of rewrite functions.
-  A rewrite function rewrites a URL.  It's passed a string, the URL
-  to rewrite.  It must return a string, the rewritten URL, or, to
-  not rewrite the URL, nil.")
-
     (defun koek-eww/rewrite-reddit (url)
       "Rewrite Reddit to Reddit mobile.
   URL is a string, the URL to rewrite."
@@ -5582,6 +5576,12 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
                               (url-host parsed))
           (setf (url-host parsed) "i.reddit.com")
           (url-recreate-url parsed))))
+
+    (defvar koek-eww/rewrite-fs '(koek-eww/rewrite-reddit)
+      "List of rewrite functions.
+  A rewrite function rewrites a URL.  It's passed a string, the URL
+  to rewrite.  It must return a string, the rewritten URL, or, to
+  not rewrite the URL, nil.")
 
     (defun koek-eww/rewrite (url)
       "Rewrite URL.
@@ -5614,7 +5614,6 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
 
     (bind-key "m" #'koek-eww/redirect eww-mode-map)
 
-    (push #'koek-eww/redirect-reddit koek-eww/redirect-fs)
     (add-hook 'eww-mode-hook #'koek-eww/setup-current)
     (add-hook 'eww-after-render-hook #'koek-eww/update-current))
 #+END_SRC
